--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "psr-4": {
       "FondOfImpala\\": "tests/FondOfImpala/",
       "Generated\\": "src/Generated/",
-      "Orm\\Zed\\": "src/Orm/Zed/"
+      "Orm\\": "src/Orm/"
     }
   },
   "config": {
